objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <label>ISBN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>